Fixed broken css in sass mixin preset.

--- a/test/expected/_multiple.scss
+++ b/test/expected/_multiple.scss
@@ -3,19 +3,19 @@
 $2__path: '/assets/images/2.png';
 $2__width: 400px;
 $2__height: 300px;
-@mixin 2() {display:block;width:100%height:autopadding-bottom:75%;background-image:url(/assets/images/2.png);background-size:contain;}
+@mixin 2() {display:block;width:100%;height:auto;padding-bottom:75%;background-image:url(/assets/images/2.png);background-size:contain;}
 @mixin 7151() {display:block;width:320px;height:240px;background-image:url(/assets/images/7151.jpg);background-size:320px 240px;}
 $7151__path: '/assets/images/7151.jpg';
 $7151__width: 320px;
 $7151__height: 240px;
-@mixin 7151() {display:block;width:100%height:autopadding-bottom:75%;background-image:url(/assets/images/7151.jpg);background-size:contain;}
+@mixin 7151() {display:block;width:100%;height:auto;padding-bottom:75%;background-image:url(/assets/images/7151.jpg);background-size:contain;}
 @mixin thumbkoshki3912() {display:block;width:160px;height:120px;background-image:url(/assets/images/thumbkoshki 3912.jpg);background-size:160px 120px;}
 $thumbkoshki3912__path: '/assets/images/thumbkoshki 3912.jpg';
 $thumbkoshki3912__width: 160px;
 $thumbkoshki3912__height: 120px;
-@mixin thumbkoshki3912() {display:block;width:100%height:autopadding-bottom:75%;background-image:url(/assets/images/thumbkoshki 3912.jpg);background-size:contain;}
+@mixin thumbkoshki3912() {display:block;width:100%;height:auto;padding-bottom:75%;background-image:url(/assets/images/thumbkoshki 3912.jpg);background-size:contain;}
 @mixin cat-20090508_025_amazing() {display:block;width:374px;height:281px;background-image:url(/assets/images/cat/20090508_025_amazing.jpg);background-size:374px 281px;}
 $cat-20090508_025_amazing__path: '/assets/images/cat/20090508_025_amazing.jpg';
 $cat-20090508_025_amazing__width: 374px;
 $cat-20090508_025_amazing__height: 281px;
-@mixin cat-20090508_025_amazing() {display:block;width:100%height:autopadding-bottom:75.1336898395722%;background-image:url(/assets/images/cat/20090508_025_amazing.jpg);background-size:contain;}
+@mixin cat-20090508_025_amazing() {display:block;width:100%;height:auto;padding-bottom:75.1336898395722%;background-image:url(/assets/images/cat/20090508_025_amazing.jpg);background-size:contain;}
